refactored file structure and routing

--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -15,10 +15,10 @@
                         <div class="col-xs-3">
                           <i class="fa fa-tasks fa-5x"></i>
                         </div>
-                        <div class="col-xs-9 text-right">
+                        <!--<div class="col-xs-9 text-right">
                           <div>Recent Orders</div>
                           <div ng-show="order in orders" class="huge">18</div>
-                        </div>
+                        </div>-->
                       </div>
                     </div>
                     <a href="javascript:void(0)" ng-click="">
@@ -40,10 +40,10 @@
                         <div class="col-xs-3">
                           <i class="fa fa-money fa-5x"></i>
                         </div>
-                        <div class="col-xs-9 text-right">
+                        <!--<div class="col-xs-9 text-right">
                           <div>Your Seafood Products</div>
                           <div ng-show="product in products" class="huge">132</div>
-                        </div>
+                        </div>-->
                       </div>
                     </div>
                     <a href="javascript:void(0)" ng-click="products">
@@ -63,10 +63,10 @@
                         <div class="col-xs-3">
                           <i class="fa fa-link fa-5x"></i>
                         </div>
-                        <div class="col-xs-9 text-right">
+                        <!--<div class="col-xs-9 text-right">
                           <div>Products in Value Chain</div>
                           <div ng-show="product in products" class="huge">56</div>
-                        </div>
+                        </div>-->
                       </div>
                     </div>
                     <a href="javascript:void(0)" ng-click="setSelection(3)">
