--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -12,7 +12,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">Settings</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a ng-click="logout()" href="#">Logout</a></li>
@@ -21,3 +21,5 @@
         </div>
     </nav>
 </div>
+
+<div ui-view></div>
