--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -5,16 +5,24 @@
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
-                <label>Name of Supply Chain Stage</label>
+                <label>Name</label>
                 <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
                 <small class="text-muted">Maximum 30 characters.</small>
             </fieldset>
+            
             <fieldset class="form-group">
-                <label>Previous Stage</label>
-                <select ng-model="prev" ng-options="stage as stage.name for stage in stages" class="form-control">
-                </select>
+                <label>Quantity</label>
+                <input class="form-control" ng-model="quantity" placeholder="i.e. Processing Plant 1">
+                <small class="text-muted">Maximum 30 characters.</small>
             </fieldset>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            
+            <fieldset class="form-group">
+                <label>Units</label>
+                <input class="form-control" ng-model="units" placeholder="i.e. Processing Plant 1">
+                <small class="text-muted">Maximum 30 characters.</small>
+            </fieldset>
+            
+            
         </form>
     </div>
     <div class="modal-footer">
@@ -22,22 +30,25 @@
         <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
     </div>
 </script>
-<script type="text/ng-template" id="editModalContent.html">
+
+<script type="text/ng-template" id="moveBlockModal.html">
     <div class="modal-header">
         <h3 class="modal-title">Add a Stage</h3>
     </div>
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
-                <label>New Name</label>
-                <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
-                <small class="text-muted">Maximum 30 characters.</small>
+                <label>Moving blocks from the "{{fromStage.name}}" stage to "{{toStage.name || '_______'}}."</label>
             </fieldset>
+
             <fieldset class="form-group">
-                <label>Previous Stage</label>
-                <select ng-model="selectedStage" ng-options="stage as stage.name for stage in getStages()" class="form-control"></select>
+                <label>Move to stage: </label>
+                <select ng-model="toStage" ng-options="stage as stage.name for stage in stages" class="form-control"></select>
             </fieldset>
-            <button type="submit" class="btn btn-primary">Submit</button>
+
+
+            
+            
         </form>
     </div>
     <div class="modal-footer">
@@ -45,47 +56,77 @@
         <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
     </div>
 </script>
-<script type="text/ng-template" id="exitSupplyChain.html">
+
+
+<script type="text/ng-template" id="viewBlocksModal.html">
     <div class="modal-header">
-        <h3 class="modal-title">Save and Exit?</h3>
+        <h3 class="modal-title">Blocks</h3>
     </div>
-    <div class="modal-body">
-        
-    </div>
+
     <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+            <button class="btn btn-primary" type="button" ng-click="printSelected()">Move Blocks</button>
     </div>
-</script>
-<div ng-controller="SupplyChainDisplayCtrl">
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <h2 class="page-header light-text">Track Inventory</h2>
-        <div class="row placeholders">
-            <div class="col-lg-8">
-                <div class="container">
-                    <div class="panel-container">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <button ng-click="addStage()" class="btn btn-default">Add</button>
-                                <button ng-click="editStage()" class="btn btn-default">Edit</button>
-                                <button class="btn btn-default">Delete</button>
-                                <button class="btn btn-default">Link</button>
-                                <button class="btn btn-default">Unlink</button>
-                                <button ng-click="saveSupplyChain()" class="btn btn-default">Save</button>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <!-- <div class="panel-heading">
+    
+    <div class="modal-body">
+        <div class="panel panel-default">
+              <!-- <div class="panel-heading">
                                 <h3 class="panel-title">Supply Chain Representation</h3>
                             </div> -->
-                            <div class="panel-body" style="height:500px">
-                                <vis-network-track data="data" options="options" events="events" height="500px"></vis-network-track>
-                            </div>
+              <div class="panel-body">
+                <div class="table-responsive">
+                  <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>ID</th>
+                        <th>Date Created</th>
+                        <th>Select</th>                        
+                      </tr>
+                    </thead>
+                    <tbody ng-repeat="block in blocks track by $index">
+                      <tr>
+                        <td>{{$index + 1}}</td>
+                        <td>{{block._id}}</td>
+                        <td>{{block.dateCreated}}</td>
+                        <td><input type="radio" ng-model="$parent.selectedBlock" ng-value="$index"></td>                        
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+    </div>
+    
+    
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="ok()">Dismiss</button>
+    </div>
+</script>
+
+
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <h2 class="page-header light-text">Track Inventory</h2>
+    <div class="row placeholders">
+        <div class="col-lg-8">
+            <div class="container">
+                <div class="panel-container">
+                    <div class="panel panel-default">
+                        <div ng-controller="InventoryCtrl" class="panel-body">
+                            <button ng-click="viewBlocks()" class="btn btn-default">View Blocks</button>
+                            <button ng-click="addBlock()" class="btn btn-default">Add Block</button>
+                            <button ng-click="saveSupplyChain()" class="btn btn-default">Save</button>
+                        </div>
+                    </div>
+                    <div ng-controller="SupplyChainDisplayCtrl" class="panel panel-default">
+                        <!-- <div class="panel-heading">
+                            <h3 class="panel-title">Supply Chain Representation</h3>
+                        </div> -->
+                        <div class="panel-body" style="height:500px">
+                            <vis-network-track data="data" options="options" events="events" height="500px"></vis-network-track>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
