move block bug fixes

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="printSelected()">Move Blocks</button>
+            <button class="btn btn-primary" type="button" ng-click="moveBlock()">Move Blocks</button>
     </div>
     
     <div class="modal-body">
