--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -1,70 +1,12 @@
-<script type="text/ng-template" id="addModalContent.html">
-    <div class="modal-header">
-        <h3 class="modal-title">Add a Stage</h3>
-    </div>
-    <div class="modal-body">
-        <form>
-            <fieldset class="form-group">
-                <label>Name</label>
-                <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
-                <small class="text-muted">Maximum 30 characters.</small>
-            </fieldset>
-            
-            <fieldset class="form-group">
-                <label>Quantity</label>
-                <input class="form-control" ng-model="quantity" placeholder="i.e. Processing Plant 1">
-                <small class="text-muted">Maximum 30 characters.</small>
-            </fieldset>
-            
-            <fieldset class="form-group">
-                <label>Units</label>
-                <input class="form-control" ng-model="units" placeholder="i.e. Processing Plant 1">
-                <small class="text-muted">Maximum 30 characters.</small>
-            </fieldset>
-            
-            
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-    </div>
-</script>
-
-<script type="text/ng-template" id="moveBlockModal.html">
-    <div class="modal-header">
-        <h3 class="modal-title">Add a Stage</h3>
-    </div>
-    <div class="modal-body">
-        <form>
-            <fieldset class="form-group">
-                <label>Moving blocks from the "{{fromStage.name}}" stage to "{{toStage.name || '_______'}}."</label>
-            </fieldset>
-
-            <fieldset class="form-group">
-                <label>Move to stage: </label>
-                <select ng-model="toStage" ng-options="stage as stage.name for stage in stages" class="form-control"></select>
-            </fieldset>
-
-
-            
-            
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-    </div>
-</script>
-
-
 <script type="text/ng-template" id="viewBlocksModal.html">
     <div class="modal-header">
         <h3 class="modal-title">Blocks</h3>
     </div>
 
     <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="moveBlock()">Move Blocks</button>
+            <button class="btn btn-primary" type="button" ng-click="moveBlock()">Move</button>
+            <button class="btn btn-primary" type="button" ng-click="deleteBlock()">Delete</button>
+            <button class="btn btn-primary" type="button" ng-click="addBlock()">Add</button>
     </div>
     
     <div class="modal-body">
@@ -97,11 +39,79 @@
             </div>
     </div>
     
-    
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="ok()">Dismiss</button>
     </div>
 </script>
+
+
+
+<script type="text/ng-template" id="addBlockModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Add Block</h3>
+    </div>
+    <div class="modal-body">
+        <form>
+            <fieldset class="form-group">
+                <label>Name</label>
+                <input class="form-control" ng-model="name" placeholder="">
+            </fieldset>
+            
+            <fieldset class="form-group">
+                <label>Quantity</label>
+                <input class="form-control" ng-model="quantity" placeholder="">
+            </fieldset>
+            
+            <fieldset class="form-group">
+                <label>Units</label>
+                <input class="form-control" ng-model="units" placeholder="">
+            </fieldset>
+            
+            
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+</script>
+
+
+<script type="text/ng-template" id="deleteBlockModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Delete Block</h3>
+    </div>
+    <div class="modal-body">
+        <p>Are you sure you want to delete this block?</p>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="ok()">Yes</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+</script>
+
+<script type="text/ng-template" id="moveBlockModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Move Block</h3>
+    </div>
+    <div class="modal-body">
+        <form>
+            <fieldset class="form-group">
+                <label>Moving blocks from the "{{fromStage.name}}" stage to "{{toStage.name || '_______'}}."</label>
+            </fieldset>
+
+            <fieldset class="form-group">
+                <label>Move to stage: </label>
+                <select ng-model="toStage" ng-options="stage as stage.name for stage in stages" class="form-control"></select>
+            </fieldset>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+</script>
+
 
 
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -113,8 +123,6 @@
                     <div class="panel panel-default">
                         <div ng-controller="InventoryCtrl" class="panel-body">
                             <button ng-click="viewBlocks()" class="btn btn-default">View Blocks</button>
-                            <button ng-click="addBlock()" class="btn btn-default">Add Block</button>
-                            <button ng-click="saveSupplyChain()" class="btn btn-default">Save</button>
                         </div>
                     </div>
                     <div ng-controller="SupplyChainDisplayCtrl" class="panel panel-default">
