minor refactors for product tab

--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -48,7 +48,7 @@
 
 <!-- MODAL CONTENT -->
 
-<script type="text/ng-template" id="addModalContent.html">
+<script type="text/ng-template" id="addProductModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Add a Product</h3>
   </div>
