--- a/src/views/dashboard.default.inventory.menu.html
+++ b/src/views/dashboard.default.inventory.menu.html
@@ -4,7 +4,7 @@
         <div class="col-lg-8">
 
             <div ng-controller="TrackInventoryMenuCtrl" class="container">
-                
+
                 <div class="panel-container">
                     <div class="panel panel-default">
                         <div class="panel-body">
@@ -23,7 +23,7 @@
                                                 <td>{{$index + 1}}</td>
                                                 <td>{{supplyChain.name}}</td>
                                                 <td>{{supplyChain.dateCreated}}</td>
-                                                <td><button ng-click="setSupplyChain(supplyChain)" class="btn btn-default">View/Edit</button></td>
+                                                <td><button ng-click="setSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button></td>
                                             </tr>
                                         </tbody>
                                     </table>
