sales management tab

--- a/src/views/dashboard.default.html
+++ b/src/views/dashboard.default.html
@@ -5,7 +5,7 @@
         <li><a ui-sref=".products">Products</a></li>
         <li><a ui-sref=".supply-chain.menu">Supply Chain</a></li>
         <li><a ui-sref=".inventory.menu">Inventory</a></li>
-        <li><a ui-sref=".sales-management">Sales Management</a></li>        
+        <li><a ui-sref=".sales-management.menu">Sales Management</a></li>        
     </ul>
 </div>
 
