--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -4,18 +4,18 @@
   </div>
 
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="moveBlock()">Move</button>
-    <button class="btn btn-primary" type="button" ng-click="deleteBlock()">Delete</button>
-    <button class="btn btn-primary" type="button" ng-click="addBlock()">Add</button>
+    <button class="btn-dashboard" type="button" ng-click="moveBlock()">Move</button>
     <!-- THIS IS THE BUTTON FOR VIEW DETAILS MODAL -->
-    <button class="btn btn-primary" type="button" ng-click="viewDetails()">View Details</button>
+    <button class="btn-dashboard" type="button" ng-click="viewDetails()">View Details</button>
+    <button class="btn-dashboard-green" type="button" ng-click="addBlock()">Add</button>
+    <button class="btn-dashboard-red" type="button" ng-click="deleteBlock()">Delete</button>
+
   </div>
 
   <div class="modal-body">
     <div class="panel panel-default">
       <!-- <div class="panel-heading">
-                                <h3 class="panel-title">Supply Chain Representation</h3>
-                            </div> -->
+      <h3 class="panel-title">Supply Chain Representation</h3></div> -->
       <div class="panel-body">
         <div class="table-responsive">
           <table class="table table-striped">
@@ -44,7 +44,7 @@
   </div>
 
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">Dismiss</button>
+    <button class="btn-dashboard" type="button" ng-click="ok()">Dismiss</button>
   </div>
 </script>
 
@@ -70,13 +70,11 @@
         <label>Units</label>
         <input class="form-control" ng-model="units" placeholder="">
       </fieldset>
-
-
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
+    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
 
@@ -89,8 +87,8 @@
     <p>Are you sure you want to delete this block?</p>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">Yes</button>
-    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn-dashboard-green" type="button" ng-click="ok()">Yes</button>
+    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
 
@@ -111,8 +109,8 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
+    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
 
@@ -127,7 +125,7 @@
     <p>Put in details here</p>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-warning" type="button" ng-click="cancel()">Close</button>
+    <button class="btn-dashboard" type="button" ng-click="cancel()">Close</button>
   </div>
 </script>
 
@@ -173,7 +171,7 @@
          </div>
          <div class="row">
              <div class="col-md-12">
-             <p><b>Step 1: </b> Click on the intermediary you would like to analyze.<br><br>
+             <h4><b>Step 1: </b> Click on the intermediary you would like to analyze.<br><br>
                <b>Step 2: </b> Click the <i>View/Edit Inventory</i> button above the supply chain visualization.<br><br>
                <b>Step 3: </b> A popup will appear, providing real-time inventory information at that location.<br><br>
                <b>Step 4a: </b> To add a block of inventory to tht stage, click "Add", then enter in the Name, Quantity,
@@ -182,7 +180,7 @@
                block, and click "Move". Then, choose the desired destination under the "Move to stage" dropdown.<br><br>
                <b>Step 5 [optional]: </b> To move the block of inventory to the e-commerce platform, click "Select" for the desired
                block, and click "Upload to e-commerce".
-             </p>
+             </h4>
            </div>
          </div>
        </div>
