--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -8,6 +8,8 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <button ng-click="addSellingPoint()" class="btn-dashboard">Add Sales Channel</button>
+                <button ng-click="editSellingPoint()" class="btn-dashboard">Edit Sales Channel</button>
+                
               </div>
             </div>
             <div class="panel panel-default">
@@ -52,14 +54,44 @@
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
-                <label>Name of Stage</label>
-                <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
+                <label>Name</label>
+                <input class="form-control" ng-model="name" placeholder="Name of sales channel...">
                 <small class="text-muted">Maximum 30 characters.</small>
+                
+                <div class="checkbox">
+    	            <label><input type="checkbox" ng-model="isEcommerceStage"> Sell on e-commerce</label>
+                </div>
+            
             </fieldset>
         </form>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+</script>
+
+
+<script type="text/ng-template" id="editSellingPointModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Edit Selling Point</h3>
+    </div>
+    <div class="modal-body">
+        <form>
+            <fieldset class="form-group">
+                <label>Name</label>
+                <input class="form-control" ng-model="sellingPoint.name" placeholder="Name of sales channel...">
+                <small class="text-muted">Maximum 30 characters.</small>
+                
+                <div class="checkbox">
+    	            <label><input type="checkbox" ng-model="isEcommerceStage"> Sell on e-commerce</label>
+                </div>
+            
+            </fieldset>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="ok()">Save</button>
         <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
     </div>
 </script>
@@ -88,5 +120,48 @@
   <div class="modal-footer">
     <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+</script>
+
+
+<script type="text/ng-template" id="viewBlocksModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Blocks</h3>
+  </div>
+
+
+  <div class="modal-body">
+    <div class="panel panel-default">
+      <!-- <div class="panel-heading">
+      <h3 class="panel-title">Supply Chain Representation</h3></div> -->
+      <div class="panel-body">
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>ID</th>
+                <th>Date Created</th>
+                <th>Select</th>
+              </tr>
+            </thead>
+            <tbody ng-repeat="block in blocks track by $index">
+              <tr>
+                <td>{{$index + 1}}</td>
+                <td>{{block._id}}</td>
+                <td>{{block.dateCreated}}</td>
+                <td>
+                  <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal-footer">
+    <button class="btn-dashboard" type="button" ng-click="ok()">Dismiss</button>
   </div>
 </script>
