--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -31,13 +31,15 @@ body {
   color: $primary-font-color;
 }
 .panel {
-  width: 90%;
+  width: 100%;
   height: 100%;
   border-color: $primary-border-color;
+
   .panel-body {
     padding: none;
     background-color: $secondary-background-color;
     border-color: $primary-border-color;
+    border-radius: 5px;
     .btn {
       background-image: linear-gradient(#fcfcfc, #eee);
       border: 1px solid #d5d5d5;
@@ -366,6 +368,12 @@ div.modal-text {
   width: 80%;
 }
 
+table {
+    display: table;
+    border-collapse: separate;
+    border-spacing: 2px;
+    border-color: grey;
+}
 
 
 /*
