--- a/src/views/dashboard.default.inventory.menu.html
+++ b/src/views/dashboard.default.inventory.menu.html
@@ -1,38 +1,44 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">Track Inventory</h2>
-    <div class="row placeholders">
-        <div class="col-lg-8">
+  <h2 class="page-header light-text">Track Inventory</h2>
+  <div class="row placeholders">
+    <!--
+      <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
+      -->
+      <div ng-controller="TrackInventoryMenuCtrl" class="container">
 
-            <div ng-controller="TrackInventoryMenuCtrl" class="container">
-
-                <div class="panel-container">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div class="table-responsive">
-                                    <table class="table table-striped">
-                                        <thead>
-                                            <tr>
-                                                <th>#</th>
-                                                <th>Name</th>
-                                                <th>Date Created</th>
-                                                <th>Last Updated</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr ng-repeat="supplyChain in supplyChains track by $index">
-                                                <td>{{$index + 1}}</td>
-                                                <td>{{supplyChain.name}}</td>
-                                                <td>{{supplyChain.dateCreated.substring(0,10)}}</td>
-                                                <td><button ng-click="setSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
+        <div class="panel-container">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="table-responsive">
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Name</th>
+                      <th>Date Created</th>
+                      <th>Last Updated</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="supplyChain in supplyChains track by $index">
+                      <td>{{$index + 1}}</td>
+                      <td>{{supplyChain.name}}</td>
+                      <td>{{supplyChain.dateCreated.substring(0,10)}}</td>
+                      <td>
+                        <div class="alignright">
+                          <button ng-click="setSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button>
+                          <button ng-click="#" class="btn-dashboard-red">Delete</button>
                         </div>
-                    </div>
-                </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
+    <!--</div>-->
+  </div>
+</div>
 </div>
