--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -1,7 +1,9 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
   <h2 class="page-header light-text">Home</h2>
   <div class="row placeholders">
-    <div class="col-lg-8">
+      <!--
+        <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
+        -->
       <div class="container">
         <div class="panel-container">
           <div class="panel panel-default">
@@ -15,10 +17,10 @@
                         <div class="col-xs-3">
                           <i class="fa fa-tasks fa-5x"></i>
                         </div>
-                        <!--<div class="col-xs-9 text-right">
+                        <div class="col-xs-9 text-right">
                           <div>Recent Orders</div>
                           <div ng-show="order in orders" class="huge">18</div>
-                        </div>-->
+                        </div>
                       </div>
                     </div>
                     <a href="javascript:void(0)" ng-click="">
@@ -40,10 +42,10 @@
                         <div class="col-xs-3">
                           <i class="fa fa-money fa-5x"></i>
                         </div>
-                        <!--<div class="col-xs-9 text-right">
+                        <div class="col-xs-9 text-right">
                           <div>Your Seafood Products</div>
                           <div ng-show="product in products" class="huge">132</div>
-                        </div>-->
+                        </div>
                       </div>
                     </div>
                     <a href="javascript:void(0)" ng-click="products">
@@ -63,10 +65,10 @@
                         <div class="col-xs-3">
                           <i class="fa fa-link fa-5x"></i>
                         </div>
-                        <!--<div class="col-xs-9 text-right">
+                        <div class="col-xs-9 text-right">
                           <div>Products in Value Chain</div>
                           <div ng-show="product in products" class="huge">56</div>
-                        </div>-->
+                        </div>
                       </div>
                     </div>
                     <a href="javascript:void(0)" ng-click="setSelection(3)">
@@ -216,6 +218,6 @@
           </div>
         </div>
       </div>
-    </div>
+    <!--</div>-->
   </div>
 </div>
