--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -1,7 +1,9 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">Supply Chains</h2>
     <div class="row placeholders">
-        <div class="col-lg-8">
+      <!--
+        <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
+        -->
             <div class="container">
                 <div class="panel-container">
                     <div class="panel panel-default">
@@ -28,7 +30,10 @@
                                                 <td>{{$index + 1}}</td>
                                                 <td>{{supplyChain.name}}</td>
                                                 <td>{{supplyChain.dateCreated.substring(0,10)}}</td>
-                                                <td><button ng-click="editSupplyChain(supplyChain)" class="btn btn-default">View/Edit</button></td>
+                                                <td>
+                                                  <button ng-click="editSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button>
+                                                  <button ng-click="deleteSupplyChain(supplyChain)" class="btn-dashboard-red">delete</button>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -37,7 +42,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                <!--
+            </div>-->
         </div>
     </div>
 </div>
