--- a/src/views/dashboard.default.sales-management.menu.html
+++ b/src/views/dashboard.default.sales-management.menu.html
@@ -1,10 +1,11 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">Sales Management</h2>
     <div class="row placeholders">
-        <div class="col-lg-8">
-
+      <!--
+        <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
+        -->
             <div ng-controller="SalesManagementMenuCtrl" class="container">
-                
+
                 <div class="panel-container">
                     <div class="panel panel-default">
                         <div class="panel-body">
@@ -23,7 +24,7 @@
                                                 <td>{{$index + 1}}</td>
                                                 <td>{{supplyChain.name}}</td>
                                                 <td>{{supplyChain.dateCreated.substring(0,10)}}</td>
-                                                <td><button ng-click="setSupplyChain(supplyChain)" class="btn btn-default">View/Edit</button></td>
+                                                <td><button ng-click="setSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -32,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            <!--</div>-->
         </div>
     </div>
 </div>
