--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -28,19 +28,17 @@
                         <th></th>
                         <th>Product Name</th>
                         <th>Unit Price</th>
-                        <th>Units</th>
                         <th>Description</th>
-                        <th>Availability</th>
+                        <th></th>
                       </tr>
                     </thead>
                     <tbody ng-repeat="product in products track by $index">
                       <tr>
                         <td><input type="checkbox" class="checkbox" ng-checked="selectedItems[$index]" ng-click="toggleItemSelection($index)"/></td>
                         <td>{{product.name}}</td>
-                        <td>{{product.price}}</td>
-                        <td>{{product.units}}</td>
+                        <td>${{product.unitPrice}}/{{product.unit}}</td>
                         <td>{{product.description}}</td>
-                        <td>{{product.availability}}</td>
+                        <td></td>
                       </tr>
                     </tbody>
                   </table>
@@ -73,22 +71,22 @@
       </div>
       <div class ="col-lg-6">
         <label>Unit Price</label>
-        <input class="form-control" ng-model="number" placeholder="ex. 4.50">
+        <input class="form-control" ng-model="unitPrice" placeholder="ex. 4.50">
         <small class="text-muted">Maximum 3 characters</small>
       </div>
       </fieldset>
 
       <fieldset class="form-group">
 
-        <div class ="col-lg-3">
+        <div class ="col-lg-6">
               <label>Units</label><br>
-              <select ng-model="units" name="mydropdown" class="dropdown">
+              <select ng-model="unit" name="mydropdown" class="dropdown">
                 <option value="lb">Pounds (Lbs.)</option>
                 <option value="kg">Kilograms (Kgs.)</option>
                 <option value="unit">Per Unit of Fish</option>
               </select>
         </div>
-        <div class ="col-lg-3">
+        <!--<div class ="col-lg-3">
               <label>Availability</label><br>
               <select ng-model="availability" name="mydropdown" class="dropdown">
                 <option value="None">None</option>
@@ -96,7 +94,7 @@
                 <option value="Medium">Medium: 151-600lbs</option>
                 <option value="High">High: 600lbs+</option>
               </select>
-            </div>
+            </div>-->
         <div class ="col-lg-6">
               <label>Attach Product Photo</label>
               <input class="form-control" type="file" ng-model="file" size ="chars">
@@ -107,7 +105,7 @@
       <fieldset class="form-group">
       <div class ="col-lg-12">
         <label>Description</label>
-        <input class="form-control" ng-model="text" placeholder="Enter a short product description">
+        <input class="form-control" ng-model="description" placeholder="Enter a short product description">
         <small class="text-muted">Maximum 100 characters</small>
       </div>
       </fieldset>
@@ -117,7 +115,7 @@
 
   <div class="modal-footer">
   <div class="alignright">
-  <button type="submit" class="btn-dashboard-green">Submit</button>
+  <button type="submit" class="btn-dashboard-green" ng-click="ok()">Submit</button>
   <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
   </div>
   </div>
